@@ -7,6 +7,16 @@ command :home do |user|
   end
 end
 
+desc "Open this repo's Admin panel a web browser."
+command :admin do |user|
+  if helper.project
+    homepage = helper.homepage_for(user || helper.owner, 'master')
+    homepage.gsub!(%r{/tree/master$}, '')
+    homepage += "/admin"
+    helper.open homepage
+  end
+end
+
 desc "Automatically set configuration info, or pass args to specify."
 usage "github config [my_username] [my_repo_name]"
 command :config do |user, repo|
